--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
@@ -1,43 +1,36 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Breakpoints
-    </title>
+
+    <title>Breakpoints</title>
   </head>
+
   <body>
-    <h1>
-      Breakpoints
-    </h1>
-    <p>
-      A breakpoint causes the execution of a thread to suspend at the location where the breakpoint is set.
-    </p>
-    <p>
-      Breakpoints can be enabled and disabled via their context menus in the Breakpoints view.
-    </p>
+    <h1>Breakpoints</h1>
+
+    <p>A breakpoint causes the execution of a thread to suspend at the location where the breakpoint is set.</p>
+
+    <p>Breakpoints can be enabled and disabled via their context menus in the Breakpoints view.</p>
+
     <ul>
-      <li>
-        When a breakpoint is enabled, it will cause a thread to suspend whenever it is hit. Enabled breakpoints are indicated with a blue circle. Enabled breakpoints that are
-        successfully installed in a class in a VM at runtime are indicated with a checkmark overlay.
-      </li>
-      <li>
-        When a breakpoint is disabled, it will not cause threads to suspend. Disabled breakpoints are indicated with a white circle.
-      </li>
+      <li>When a breakpoint is enabled, it will cause a thread to suspend whenever it is hit. Enabled breakpoints are indicated with a blue circle. Enabled breakpoints that are
+      successfully installed in a class in a VM at runtime are indicated with a checkmark overlay.</li>
+
+      <li>When a breakpoint is disabled, it will not cause threads to suspend. Disabled breakpoints are indicated with a white circle.</li>
     </ul>
-    <p>
-      Debugging breakpoints are displayed in the marker bar in the editor area and in the Breakpoints view.
+
+    <p>Debugging breakpoints are displayed in the marker bar in the editor area and in the Breakpoints view.</p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-4.htm">Run menu</a><br>
+     <a href="../reference/ref-35.htm">Breakpoints view</a><br>
     </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-4.htm">Run menu</a><br>
-       <a href="../reference/ref-35.htm">Breakpoints view</a><br>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
