--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
@@ -1,47 +1,42 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Build classpath
-    </title>
+
+    <title>Build classpath</title>
   </head>
+
   <body>
-    <h1>
-      Build classpath
-    </h1>
-    <p>
-      The build classpath is the path which is searched during compilation of a Java project. This path is referred to as &quot;Java Build Path&quot; in the JDT UI.
+    <h1>Build classpath</h1>
+
+    <p>The build classpath is the path which is searched during compilation of a Java project. This path is referred to as "Java Build Path" in the JDT UI.</p>
+
+    <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+     <a href="concepts-4.htm">Java builder</a> <a href="cclsspthv.htm"><br>
+     Java development tools (JDT)<br>
+     Classpath variable</a></p>
+
+    <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+     <a href="../tasks/tasks-113.htm">Adding a JAR file to the build path</a><br>
+     <a href="../tasks/tasks-112.htm">Adding a library folder to the build path</a><br>
+     <a href="../tasks/tasks-106.htm">Building a Java program</a><br>
+     <a href="../tasks/tasks-108.htm">Building automatically</a><br>
+     <a href="../tasks/tasks-109.htm">Building manually</a><br>
+     <a href="../tasks/tasks-111.htm">Viewing and editing a project's build path</a><br>
+     <a href="../tasks/tasks-110.htm">Working with build paths</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-15.htm">Classpath Variables preferences</a><br>
+     <a href="../reference/ref-123.htm">Java Build Path properties</a><br>
     </p>
-    <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-       <a href="concepts-4.htm">Java builder</a> <a href="cclsspthv.htm"><br>
-       Java development tools (JDT)<br>
-       Classpath variable</a>
+
+    <p><br>
     </p>
-    <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-       <a href="../tasks/tasks-113.htm">Adding a JAR file to the build path</a><br>
-       <a href="../tasks/tasks-112.htm">Adding a library folder to the build path</a><br>
-       <a href="../tasks/tasks-106.htm">Building a Java program</a><br>
-       <a href="../tasks/tasks-108.htm">Building automatically</a><br>
-       <a href="../tasks/tasks-109.htm">Building manually</a><br>
-       <a href="../tasks/tasks-111.htm">Viewing and editing a project&#39;s build path</a><br>
-       <a href="../tasks/tasks-110.htm">Working with build paths</a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-15.htm">Classpath Variables preferences</a><br>
-       <a href="../reference/ref-123.htm">Java Build Path properties</a><br>
-    </p>
-    <p>
-      <br>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
