--- a/bundles/org.eclipse.jdt.doc.user/concepts/clocdbug.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/clocdbug.htm
@@ -1,23 +1,21 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Local debugging
-    </title>
+
+    <title>Local debugging</title>
   </head>
+
   <body>
-    <h1>
-      Local debugging
-    </h1>
-    <p>
-      When a Java program is launched in debug mode (e.g., by clicking the <span class="control">Debug</span> button), execution of the program can be controlled by the debugger.
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+    <h1>Local debugging</h1>
+
+    <p>When a Java program is launched in debug mode (e.g., by clicking the <span class="control">Debug</span> button), execution of the program can be controlled by the
+    debugger.</p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
