--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -1,70 +1,58 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      String externalization
-    </title>
+
+    <title>String externalization</title>
   </head>
+
   <body>
-    <h1>
-      String externalization
-    </h1>
-    <p>
-      For an explanation what string externalization and internationalization are please see:
-    </p>
+    <h1>String externalization</h1>
+
+    <p>For an explanation what string externalization and internationalization are please see:</p>
+
     <ul>
-      <li>
-        <a href="http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain">http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain</a>
-      </li>
-      <li>
-        <a href="http://java.sun.com/docs/books/tutorial/i18n/intro/index.html">http://java.sun.com/docs/books/tutorial/i18n/intro/index.html</a>
-      </li>
+      <li><a href=
+      "http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain">http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain</a></li>
+
+      <li><a href="http://java.sun.com/docs/books/tutorial/i18n/intro/index.html">http://java.sun.com/docs/books/tutorial/i18n/intro/index.html</a></li>
     </ul>
-    <p>
-      The JDT uses comments put in code to mark strings as externalized.
-    </p>
-    <p>
-      These comments are of form <code>//$NON-NLS-n$</code> where n is the 1-based index of the string in a line of code.
-    </p>
-    <p>
-      The JDT provides the following support for internationalization and string externalization:
-    </p>
+
+    <p>The JDT uses comments put in code to mark strings as externalized.</p>
+
+    <p>These comments are of form <code>//$NON-NLS-n$</code> where n is the 1-based index of the string in a line of code.</p>
+
+    <p>The JDT provides the following support for internationalization and string externalization:</p>
+
     <ul>
       <li>
         Compiler option that lets you mark not-externalized strings as compile-time warnings or errors. 
+
         <ul>
-          <li>
-            See the <span class="control">Window &gt; Preferences &gt; Java &gt; Compiler &gt; Errors and Warnings &gt; Not-externalized strings</span> preference
-          </li>
+          <li>See the <span class="control">Window &gt; Preferences &gt; Java &gt; Compiler &gt; Errors and Warnings &gt; Not-externalized strings</span> preference</li>
         </ul>
       </li>
-      <li>
-        Support to find compilation units that contain not-externalized strings.
-      </li>
-      <li>
-        A wizard that lets you externalize strings.
-      </li>
-      <li>
-        Support for finding unused and incorrectly used keys for strings externalized to property files.
-      </li>
+
+      <li>Support to find compilation units that contain not-externalized strings.</li>
+
+      <li>A wizard that lets you externalize strings.</li>
+
+      <li>Support for finding unused and incorrectly used keys for strings externalized to property files.</li>
     </ul>
-    <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-       <a href="../tasks/tasks-188.htm">Finding strings to externalize</a><br>
-       <a href="../tasks/tasks-202.htm">Finding unused and incorrectly used keys in property files</a><br>
-       <a href="../tasks/tasks-180.htm">Using the Externalize Strings wizard</a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-menu-source.htm">Source menu</a><br>
-       <a href="../reference/ref-wizard-externalize-strings.htm">Externalize Strings wizard</a><br>
-       <a href="../reference/ref-preferences-compiler.htm">Compiler preferences</a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+
+    <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+     <a href="../tasks/tasks-188.htm">Finding strings to externalize</a><br>
+     <a href="../tasks/tasks-202.htm">Finding unused and incorrectly used keys in property files</a><br>
+     <a href="../tasks/tasks-180.htm">Using the Externalize Strings wizard</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-menu-source.htm">Source menu</a><br>
+     <a href="../reference/ref-wizard-externalize-strings.htm">Externalize Strings wizard</a><br>
+     <a href="../reference/ref-preferences-compiler.htm">Compiler preferences</a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
