--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -1,107 +1,86 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Java views
-    </title>
+
+    <title>Java views</title>
   </head>
+
   <body>
-    <h1>
-      Java views
-    </h1>
-    <p>
-      The Java development tools contribute the following views to the workbench:
-    </p>
-    <h2>
-      Package Explorer view
-    </h2>
-    <p>
-      The Package Explorer view shows the Java element hierarchy of the Java projects in your workbench. It provides you with a Java-specific view of the resources shown in the
-      Navigator. The element hierarchy is derived from the project&#39;s build class paths.
-    </p>
-    <p>
-      For each project, its source folders and referenced libraries are shown in the tree. You can open and browse the contents of both internal and external JAR files.
-    </p>
-    <h2>
-      Hierarchy view
-    </h2>
-    <p>
-      The Hierarchy view offers three different ways to look at a type hierarchy:
-    </p>
+    <h1>Java views</h1>
+
+    <p>The Java development tools contribute the following views to the workbench:</p>
+
+    <h2>Package Explorer view</h2>
+
+    <p>The Package Explorer view shows the Java element hierarchy of the Java projects in your workbench. It provides you with a Java-specific view of the resources shown in the
+    Navigator. The element hierarchy is derived from the project's build class paths.</p>
+
+    <p>For each project, its source folders and referenced libraries are shown in the tree. You can open and browse the contents of both internal and external JAR files.</p>
+
+    <h2>Hierarchy view</h2>
+
+    <p>The Hierarchy view offers three different ways to look at a type hierarchy:</p>
+
     <ul>
-      <li>
-        <span class="control"><span>Show the Type Hierarchy</span></span> <span>displays the type hierarchy of a type.</span>
-      </li>
-      <li>
-        <span class="control"><span>Show the Supertype Hierarchy</span></span> <span>displays the supertype hierarchy of a type.</span>
-      </li>
-      <li>
-        <span><span class="control">Show the Subtype Hierarchy</span> displays the supertype hierarchy of a type.</span>
-      </li>
+      <li><span class="control"><span>Show the Type Hierarchy</span></span> <span>displays the type hierarchy of a type.</span></li>
+
+      <li><span class="control"><span>Show the Supertype Hierarchy</span></span> <span>displays the supertype hierarchy of a type.</span></li>
+
+      <li><span><span class="control">Show the Subtype Hierarchy</span> displays the supertype hierarchy of a type.</span></li>
     </ul>
     <hr>
-    <h2>
-      <span class="control">The following views are most commonly used in the Java Browsing perspective.</span>
-    </h2>
-    <h2>
-      Projects view
-    </h2>
-    <p>
-      The Projects view shows Java projects, source folders, external and internal libraries.
+
+    <h2><span class="control">The following views are most commonly used in the Java Browsing perspective.</span></h2>
+
+    <h2>Projects view</h2>
+
+    <p>The Projects view shows Java projects, source folders, external and internal libraries.</p>
+
+    <p>Note: source folders and libraries (both internal and external) presented in this view are not expandable. When they are selected, their contents are shown in the Packages
+    view.</p>
+
+    <h2>Packages view</h2>
+
+    <p>The Packages view shows a list of Java packages from the currently selected Java projects, source folders or libraries. Typically, the Projects view is used to make this
+    selection.<br>
     </p>
-    <p>
-      Note: source folders and libraries (both internal and external) presented in this view are not expandable. When they are selected, their contents are shown in the Packages
-      view.
+
+    <h2>Types view</h2>
+
+    <p>The Types view shows a list of Java types from the currently selected packages. Typically, the Packages view is used to make this selection.<br>
     </p>
-    <h2>
-      Packages view
-    </h2>
-    <p>
-      The Packages view shows a list of Java packages from the currently selected Java projects, source folders or libraries. Typically, the Projects view is used to make this
-      selection.<br>
+
+    <h2>Members view</h2>
+
+    <p>The Members shows the content of a type, compilation unit or CLASS file. Typically, the Types view is used to make this selection.</p>
+
+    <p><img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
+     <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
+     <a href="../concepts/concepts-5.htm">Java perspectives</a></p>
+
+    <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
+     <a href="../tasks/tasks-10.htm">Changing the appearance of the console view</a><br>
+     <a href="../tasks/tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
+     <a href="../tasks/tasks-130.htm">Launching a Java program</a></p>
+
+    <p><img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
+     <a href="../reference/ref-35.htm">Breakpoints view</a><br>
+     <a href="../reference/ref-45.htm">Console view</a><br>
+     <a href="../reference/ref-51.htm">Debug view</a><br>
+     <a href="../reference/ref-52.htm">Display view</a><br>
+     <a href="../reference/ref-56.htm">Expressions view</a><br>
+     <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
+     <a href="../reference/ref-view-package-explorer.htm">Package Explorer view</a><br>
+     <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
+     <a href="../reference/ref-74.htm">Variables view</a><br>
+     <a href="../reference/ref-24.htm">Views and editors</a><br>
+    <br>
     </p>
-    <h2>
-      Types view
-    </h2>
-    <p>
-      The Types view shows a list of Java types from the currently selected packages. Typically, the Packages view is used to make this selection.<br>
-    </p>
-    <h2>
-      Members view
-    </h2>
-    <p>
-      The Members shows the content of a type, compilation unit or CLASS file. Typically, the Types view is used to make this selection.
-    </p>
-    <p>
-      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
-       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
-       <a href="../concepts/concepts-5.htm">Java perspectives</a>
-    </p>
-    <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-       <a href="../tasks/tasks-10.htm">Changing the appearance of the console view</a><br>
-       <a href="../tasks/tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
-       <a href="../tasks/tasks-130.htm">Launching a Java program</a>
-    </p>
-    <p>
-      <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
-       <a href="../reference/ref-35.htm">Breakpoints view</a><br>
-       <a href="../reference/ref-45.htm">Console view</a><br>
-       <a href="../reference/ref-51.htm">Debug view</a><br>
-       <a href="../reference/ref-52.htm">Display view</a><br>
-       <a href="../reference/ref-56.htm">Expressions view</a><br>
-       <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer view</a><br>
-       <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
-       <a href="../reference/ref-74.htm">Variables view</a><br>
-       <a href="../reference/ref-24.htm">Views and editors</a><br>
-      <br>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
