--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -1,104 +1,83 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Java editor
-    </title>
+
+    <title>Java editor</title>
   </head>
+
   <body>
-    <h1>
-      Java editor
-    </h1>
-    <p>
-      The JDT provides an editor that gives you specific support for editing Java code.
-    </p>
-    <p>
-      The editor is associated with the Java-specific Outline view, which shows the structure of the active Java compilation unit. It is updated as the user edits the compilation
-      unit.
-    </p>
-    <p>
-      The Java editor can be opened on binary CLASS files. If a JAR file containing the CLASS files has a source attachment, then the editor shows the corresponding source.
-    </p>
-    <p>
-      The editor includes the following features:
-    </p>
+    <h1>Java editor</h1>
+
+    <p>The JDT provides an editor that gives you specific support for editing Java code.</p>
+
+    <p>The editor is associated with the Java-specific Outline view, which shows the structure of the active Java compilation unit. It is updated as the user edits the compilation
+    unit.</p>
+
+    <p>The Java editor can be opened on binary CLASS files. If a JAR file containing the CLASS files has a source attachment, then the editor shows the corresponding source.</p>
+
+    <p>The editor includes the following features:</p>
+
     <ul>
-      <li>
-        <span>Syntax highlighting</span>
-      </li>
-      <li>
-        <span>Content/code assist</span>
-      </li>
-      <li>
-        <span>Code formatting</span>
-      </li>
-      <li>
-        <span>Import assistance</span>
-      </li>
-      <li>
-        <span>Integrated debugging features</span>
-      </li>
+      <li><span>Syntax highlighting</span></li>
+
+      <li><span>Content/code assist</span></li>
+
+      <li><span>Code formatting</span></li>
+
+      <li><span>Import assistance</span></li>
+
+      <li><span>Integrated debugging features</span></li>
     </ul>
-    <p>
-      <span>The Java editor can be configured to either show an entire compilation unit or a single Java element only. To change the setting, use the toolbar button <span class=
-      "control">Show Source of Selected Element Only</span>.</span>
-    </p>
-    <p>
-      By default, this editor is activated by either:
-    </p>
+
+    <p><span>The Java editor can be configured to either show an entire compilation unit or a single Java element only. To change the setting, use the toolbar button <span class=
+    "control">Show Source of Selected Element Only</span>.</span></p>
+
+    <p>By default, this editor is activated by either:</p>
+
     <ul>
-      <li>
-        <span>selecting <span class="control">Open With</span> &gt; <span class="control">Java Editor</span> from a selection&#39;s pop-up menu in the Navigator view, Package
-        Explorer view or Types view</span>
-      </li>
-      <li>
-        clicking a Java file in the Navigator or Package Explorer (see the <span class="control"> Window &gt; Preferences &gt; Workbench</span> preference page to choose
-        between single and double click modes)
-      </li>
-      <li>
-        clicking a Java type, method or field in the Package Explorer view, Types view, Members view or Type Hierarchy view (see the <span class="control"> Window &gt;
-        Preferences &gt; Workbench</span> preference page to choose between single and double click modes)
-      </li>
-      <li>
-        <span>single-clicking a currently-open Java file in the Navigator view or Package Explorer view.</span>
-      </li>
-      <li>
-        single-clicking a Java type, method or field, with its compilation unit currently open, in the Package Explorer view, Types view, Members view or Type Hierarchy view
-      </li>
-      <li>
-        <span>selecting <span class="control">Open</span> from the pop-up menu of either a type or a method in the Type Hierarchy view, Members view, Types view or Package
-        Explorer view.</span>
-      </li>
+      <li><span>selecting <span class="control">Open With</span> &gt; <span class="control">Java Editor</span> from a selection's pop-up menu in the Navigator view, Package
+      Explorer view or Types view</span></li>
+
+      <li>clicking a Java file in the Navigator or Package Explorer (see the <span class="control">Window &gt; Preferences &gt; Workbench</span> preference page to choose between
+      single and double click modes)</li>
+
+      <li>clicking a Java type, method or field in the Package Explorer view, Types view, Members view or Type Hierarchy view (see the <span class="control">Window &gt;
+      Preferences &gt; Workbench</span> preference page to choose between single and double click modes)</li>
+
+      <li><span>single-clicking a currently-open Java file in the Navigator view or Package Explorer view.</span></li>
+
+      <li>single-clicking a Java type, method or field, with its compilation unit currently open, in the Package Explorer view, Types view, Members view or Type Hierarchy
+      view</li>
+
+      <li><span>selecting <span class="control">Open</span> from the pop-up menu of either a type or a method in the Type Hierarchy view, Members view, Types view or Package
+      Explorer view.</span></li>
     </ul>
-    <p>
-      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
-       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
-    </p>
-    <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-       <a href="../tasks/tasks-59.htm">Adding required import statements</a><br>
-       <a href="../tasks/tasks-138.htm">Evaluating expressions</a><br>
-       <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
-       <a href="../tasks/tasks-57.htm">Generating getters and setters</a><br>
-       <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
-       <a href="../tasks/tasks-73.htm">Opening an editor for a selected element</a><br>
-       <a href="../tasks/tasks-65.htm">Using content/code assist</a><br>
-       <a href="../tasks/tasks-54.htm">Using the Java editor</a><br>
-       <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a><br>
-       <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a>
-    </p>
-    <p>
-      <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
-       <a href="../reference/ref-java-editor.htm">Java editor actions</a><br>
-       <a href="../reference/ref-21.htm">Java editor preferences</a><br>
-       <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
-       <a href="../reference/ref-24.htm">Views and editors</a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+
+    <p><img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
+     <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+
+    <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
+     <a href="../tasks/tasks-59.htm">Adding required import statements</a><br>
+     <a href="../tasks/tasks-138.htm">Evaluating expressions</a><br>
+     <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
+     <a href="../tasks/tasks-57.htm">Generating getters and setters</a><br>
+     <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
+     <a href="../tasks/tasks-73.htm">Opening an editor for a selected element</a><br>
+     <a href="../tasks/tasks-65.htm">Using content/code assist</a><br>
+     <a href="../tasks/tasks-54.htm">Using the Java editor</a><br>
+     <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a><br>
+     <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a></p>
+
+    <p><img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
+     <a href="../reference/ref-java-editor.htm">Java editor actions</a><br>
+     <a href="../reference/ref-21.htm">Java editor preferences</a><br>
+     <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
+     <a href="../reference/ref-24.htm">Views and editors</a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
