--- a/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
@@ -1,43 +1,37 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Templates
-    </title>
+
+    <title>Templates</title>
   </head>
+
   <body>
-    <h1>
-      Templates
-    </h1>
-    <p>
-      Templates are often reoccurring source code patterns.
+    <h1>Templates</h1>
+
+    <p>Templates are often reoccurring source code patterns.</p>
+
+    <p>The JDT offers support for creating, managing and using templates.</p>
+
+    <p><img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
+     <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+
+    <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
+     <a href="../tasks/tasks-171.htm">Using templates</a><br>
+     <a href="../tasks/tasks-203.htm">Writing your own templates</a></p>
+
+    <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+     <a href="../reference/ref-menu-edit.htm">Edit menu</a><br>
+     <a href="../reference/ref-143.htm">Java Content Assist</a><br>
+     <a href="../reference/ref-preferences-templates.htm">Templates preferences</a><br>
     </p>
-    <p>
-      The JDT offers support for creating, managing and using templates.
+
+    <p><br>
     </p>
-    <p>
-      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
-       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
-    </p>
-    <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-       <a href="../tasks/tasks-171.htm">Using templates</a><br>
-       <a href="../tasks/tasks-203.htm">Writing your own templates</a>
-    </p>
-    <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-       <a href="../reference/ref-menu-edit.htm">Edit menu</a><br>
-       <a href="../reference/ref-143.htm">Java Content Assist</a><br>
-       <a href="../reference/ref-preferences-templates.htm">Templates preferences</a><br>
-    </p>
-    <p>
-      <br>
-    </p>
-    <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+
+    <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
