--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-205.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-205.htm
@@ -1,43 +1,38 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
-    <title>
-      Parameters page
-    </title>
+
+    <title>Parameters page</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
+
   <body>
-    <h1>
-      Parameters page
-    </h1>
+    <h1>Parameters page</h1>
     <img src="../images/tasks_205a.gif" width="393" height="260" alt="Parameters Page for the Rename Local Variable Refactoring Command"> 
-    <p>
-      Parameters Page for the Rename Local Variable Refactoring Command
-    </p>
+
+    <p>Parameters Page for the Rename Local Variable Refactoring Command</p>
+
     <ul>
-      <li>
-        In the <span class="control"><span class="control">Enter new name</span></span> field, type a new name for the local variable.
-      </li>
-      <li>
-        If you do not want to update references to the renamed local variable, deselect the <span class="control"><span class="control">Update references to the renamed
-        element</span></span> checkbox.
-      </li>
-      <li>
-        Click <span class="control"><span class="control">Next</span></span> to perform a quick refactoring, or click&nbsp;<span class="control"><span class=
-        "control">Finish</span></span> to perform a controlled refactoring.
-      </li>
+      <li>In the <span class="control"><span class="control">Enter new name</span></span> field, type a new name for the local variable.</li>
+
+      <li>If you do not want to update references to the renamed local variable, deselect the <span class="control"><span class="control">Update references to the renamed
+      element</span></span> checkbox.</li>
+
+      <li>Click <span class="control"><span class="control">Next</span></span> to perform a quick refactoring, or click&nbsp;<span class="control"><span class=
+      "control">Finish</span></span> to perform a controlled refactoring.</li>
     </ul>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="tasks-204.htm">Renaming a local variable</a><br>
-       <a href="tasks-82.htm">See Refactoring without Preview</a><br>
-       <a href="tasks-83.htm">See Refactoring with Preview</a><br>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-204.htm">Renaming a local variable</a><br>
+     <a href="tasks-82.htm">See Refactoring without Preview</a><br>
+     <a href="tasks-83.htm">See Refactoring with Preview</a><br>
     </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
-    </p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+    "14"></a></p>
   </body>
 </html>
 
