--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
@@ -1,51 +1,46 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Java development tools (JDT)
-    </title>
+
+    <title>Java development tools (JDT)</title>
   </head>
+
   <body>
-    <h1>
-      Java development tools (JDT)
-    </h1>
-    <p>
-      The Java development tools (JDT) are a set of extensions to the workbench that enable Java development.
+    <h1>Java development tools (JDT)</h1>
+
+    <p>The Java development tools (JDT) are a set of extensions to the workbench that enable Java development.</p>
+
+    <p><img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+     <a href="cbuildcp.htm">Build classpath</a><br>
+     <a href="../concepts/cclsspthv.htm">Classpath variables</a><br>
+     <a href="../concepts/concepts-10.htm">Debugger</a><br>
+     <a href="../concepts/concepts-4.htm">Java builder</a><br>
+     <a href="../concepts/concepts-7.htm">Java editor</a><br>
+     <a href="../concepts/concepts-3.htm">Java projects</a><br>
+     <a href="../concepts/concepts-5.htm">Java perspectives</a><br>
+     <a href="../concepts/concepts-6.htm">Java views</a><br>
+     <a href="../concepts/concepts-8.htm">Java search</a><br>
+     <a href="../concepts/concepts-9.htm">Refactoring support</a><br>
+     <a href="../concepts/concepts-11.htm">Scrapbook</a></p>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="../tasks/tasks-31.htm">Adding source code as individual files</a><br>
+     <a href="../tasks/tasks-11.htm">Creating Java elements</a><br>
+     <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
+     <a href="../tasks/tasks-64.htm">Restoring a deleted workbench element</a><br>
+     <a href="../tasks/tasks-2.htm">Showing and hiding files</a><br>
+     <a href="../tasks/tasks-119.htm">Working with JREs</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-2.htm">JDT actions</a><br>
+     <a href="../reference/ref-152.htm">Frequently asked questions on JDT</a><br>
+     <a href="../reference/ref-155.htm">JDT glossary</a><br>
     </p>
-    <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
-       <a href="cbuildcp.htm">Build classpath</a><br>
-       <a href="../concepts/cclsspthv.htm">Classpath variables</a><br>
-       <a href="../concepts/concepts-10.htm">Debugger</a><br>
-       <a href="../concepts/concepts-4.htm">Java builder</a><br>
-       <a href="../concepts/concepts-7.htm">Java editor</a><br>
-       <a href="../concepts/concepts-3.htm">Java projects</a><br>
-       <a href="../concepts/concepts-5.htm">Java perspectives</a><br>
-       <a href="../concepts/concepts-6.htm">Java views</a><br>
-       <a href="../concepts/concepts-8.htm">Java search</a><br>
-       <a href="../concepts/concepts-9.htm">Refactoring support</a><br>
-       <a href="../concepts/concepts-11.htm">Scrapbook</a>
-    </p>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="../tasks/tasks-31.htm">Adding source code as individual files</a><br>
-       <a href="../tasks/tasks-11.htm">Creating Java elements</a><br>
-       <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
-       <a href="../tasks/tasks-64.htm">Restoring a deleted workbench element</a><br>
-       <a href="../tasks/tasks-2.htm">Showing and hiding files</a><br>
-       <a href="../tasks/tasks-119.htm">Working with JREs</a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-2.htm">JDT actions</a><br>
-       <a href="../reference/ref-152.htm">Frequently asked questions on JDT</a><br>
-       <a href="../reference/ref-155.htm">JDT glossary</a><br>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
