--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -1,130 +1,107 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Java search
-    </title>
+
+    <title>Java search</title>
   </head>
+
   <body>
-    <h1>
-      Java search
-    </h1>
-    <p>
-      <span>The Java searching support allows you to find declarations and references of Java elements (packages, types, methods, fields). Searching is supported by an index that
-      is kept up to date in the background as the resources corresponding to Java elements are changed. The Java search operates on workspaces independent of their build state.
-      For examples, searches can be conducted when auto-build is turned off.</span>
-    </p>
-    <p>
-      The following searches can be conducted from the pop-up menus of Java elements:
-    </p>
+    <h1>Java search</h1>
+
+    <p><span>The Java searching support allows you to find declarations and references of Java elements (packages, types, methods, fields). Searching is supported by an index that
+    is kept up to date in the background as the resources corresponding to Java elements are changed. The Java search operates on workspaces independent of their build state. For
+    examples, searches can be conducted when auto-build is turned off.</span></p>
+
+    <p>The following searches can be conducted from the pop-up menus of Java elements:</p>
+
     <table border="1" cellspacing="0" cellpadding="0" summary="Java search actions">
       <thead>
         <tr>
           <td>
-            <p>
-              <span class="control">Command</span>
-            </p>
+            <p><span class="control">Command</span></p>
           </td>
+
           <td>
-            <p>
-              <span class="control">Description</span>
-            </p>
+            <p><span class="control">Description</span></p>
           </td>
         </tr>
       </thead>
+
       <tbody>
         <tr>
           <td valign="top">
-            <p>
-              References
-            </p>
+            <p>References</p>
           </td>
+
           <td valign="top">
-            <p>
-              Finds all references to the selected Java element
-            </p>
+            <p>Finds all references to the selected Java element</p>
           </td>
         </tr>
+
         <tr>
           <td valign="top">
-            <p>
-              Declarations
-            </p>
+            <p>Declarations</p>
           </td>
+
           <td valign="top">
-            <p>
-              Finds all declarations of the selected Java element
-            </p>
+            <p>Finds all declarations of the selected Java element</p>
           </td>
         </tr>
+
         <tr>
           <td valign="top">
-            <p>
-              Implementors
-            </p>
+            <p>Implementors</p>
           </td>
+
           <td valign="top">
-            <p>
-              Finds all implementors of the selected Java interface
-            </p>
+            <p>Finds all implementors of the selected Java interface</p>
           </td>
         </tr>
+
         <tr>
           <td valign="top">
-            <p>
-              Read access
-            </p>
+            <p>Read access</p>
           </td>
+
           <td valign="top">
-            <p>
-              Finds all read accesses to the selected Java field
-            </p>
+            <p>Finds all read accesses to the selected Java field</p>
           </td>
         </tr>
+
         <tr>
           <td valign="top">
-            <p>
-              Write access
-            </p>
+            <p>Write access</p>
           </td>
+
           <td valign="top">
-            <p>
-              Finds all write accesses to the selected Java field
-            </p>
+            <p>Finds all write accesses to the selected Java field</p>
           </td>
         </tr>
       </tbody>
     </table>
-    <p>
-      The scope of the search is defined as:
-    </p>
-    <p>
-      <span class="control">Workspace</span> - all projects and files in the workspace are included in this search
-    </p>
-    <p>
-      <span class="control">Hierarchy</span> - only the type hierarchy of the selected element is included in this search
-    </p>
-    <p>
-      <span class="control">Working Set</span> - only resources that belong to the chosen working set are included in this search
-    </p>
-    <p>
-      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
-       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
-    </p>
-    <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-       <a href="../tasks/tasks-79.htm">Searching Java code</a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-menu-search.htm">Search actions</a><br>
-       <a href="../reference/ref-131.htm">Java Search tab</a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+
+    <p>The scope of the search is defined as:</p>
+
+    <p><span class="control">Workspace</span> - all projects and files in the workspace are included in this search</p>
+
+    <p><span class="control">Hierarchy</span> - only the type hierarchy of the selected element is included in this search</p>
+
+    <p><span class="control">Working Set</span> - only resources that belong to the chosen working set are included in this search</p>
+
+    <p><img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
+     <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+
+    <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
+     <a href="../tasks/tasks-79.htm">Searching Java code</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-menu-search.htm">Search actions</a><br>
+     <a href="../reference/ref-131.htm">Java Search tab</a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
