--- a/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
@@ -1,28 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Remote debugging
-    </title>
+
+    <title>Remote debugging</title>
   </head>
+
   <body>
-    <h1>
-      Remote debugging
-    </h1>
-    <p>
-      It is possible to connect to and debug a Java program that has been launched in debug mode configured to accept connections on a remote or local host. Debugging a remote
-      program is similar to debugging a regular Java program, except that the program has already been launched and could be on a remote host. <a href="clocdbug.htm">See Debugging
-      Locally</a>
-    </p>
-    <p class="Note">
-      Note: Launching a Java program in debug mode is VM-specific.
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-    </p>
+    <h1>Remote debugging</h1>
+
+    <p>It is possible to connect to and debug a Java program that has been launched in debug mode configured to accept connections on a remote or local host. Debugging a remote
+    program is similar to debugging a regular Java program, except that the program has already been launched and could be on a remote host. <a href="clocdbug.htm">See Debugging
+    Locally</a></p>
+
+    <p class="Note">Note: Launching a Java program in debug mode is VM-specific.</p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
