--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
@@ -1,112 +1,92 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
-    <title>
-      Using the Find/Replace dialog
-    </title>
+    <title>Using the Find/Replace dialog</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
+
   <body>
-    <h1>
-      Using the Find/Replace dialog
-    </h1>
-    <p>
-      To open the Find / Replace dialog:
-    </p>
+    <h1>Using the Find/Replace dialog</h1>
+
+    <p>To open the Find / Replace dialog:</p>
+
     <ol>
-      <li>
-        Optionally, select some text in a text (or Java) editor
-      </li>
-      <li>
-        Press <kbd>Ctrl</kbd>+<kbd>F</kbd> or
-      </li>
-      <li>
-        From the menu bar, select <span class="control">Edit &gt; Find / Replace</span>
-      </li>
+      <li>Optionally, select some text in a text (or Java) editor</li>
+
+      <li>Press <kbd>Ctrl</kbd>+<kbd>F</kbd> or</li>
+
+      <li>From the menu bar, select <span class="control">Edit &gt; Find / Replace</span></li>
     </ol>
-    <p>
-      To use the Find / Replace dialog:
-    </p>
+
+    <p>To use the Find / Replace dialog:</p>
+
     <ol>
-      <li>
-        In the <span class="control">Find</span> field, enter the text you want to replace
-      </li>
-      <li>
-        Optionally, in the <span class="control">Replace With</span> field, enter the next text
-      </li>
-      <li>
-        Use the radio buttons in the <span class="control">Direction</span> group to select the direction of finding occurrences (relative to the current caret position)
-      </li>
+      <li>In the <span class="control">Find</span> field, enter the text you want to replace</li>
+
+      <li>Optionally, in the <span class="control">Replace With</span> field, enter the next text</li>
+
+      <li>Use the radio buttons in the <span class="control">Direction</span> group to select the direction of finding occurrences (relative to the current caret position)</li>
+
       <li>
         In the <span class="control">Scope</span> radio button group: 
+
         <ul>
-          <li>
-            Select the <span class="control">Selected Lines</span> button if you want to limit find / replace to the lines you selected when opening the dialog
-          </li>
-          <li>
-            Select the <span class="control">All</span> button otherwise
-          </li>
+          <li>Select the <span class="control">Selected Lines</span> button if you want to limit find / replace to the lines you selected when opening the dialog</li>
+
+          <li>Select the <span class="control">All</span> button otherwise</li>
         </ul>
       </li>
+
       <li>
         In the <span class="control">Options</span> group: 
+
         <ul>
-          <li>
-            Select the <span class="control">Case Sensitive</span> checkbox if you want finding to be case sensitive.
-          </li>
-          <li>
-            Select the <span class="control">Whole Word</span> checkbox if you want to find / replace only those occurrences in which the text you entered in the <span class=
-            "control">Find</span> field is a whole word
-          </li>
-          <li>
-            Select the <span class="control">Wrap Search</span> checkbox if you want the dialog to continue from the top of the file once the bottom is reached (if you find /
-            replace in Selected Lines only, then this option applies to those lines only)
-          </li>
-          <li>
-            Select the <span class="control">Incremental</span> checkbox if you want to perform incremental find (e.g. the dialog will find matching occurrences while you are
-            typing in the Find field)
-          </li>
+          <li>Select the <span class="control">Case Sensitive</span> checkbox if you want finding to be case sensitive.</li>
+
+          <li>Select the <span class="control">Whole Word</span> checkbox if you want to find / replace only those occurrences in which the text you entered in the <span class=
+          "control">Find</span> field is a whole word</li>
+
+          <li>Select the <span class="control">Wrap Search</span> checkbox if you want the dialog to continue from the top of the file once the bottom is reached (if you find /
+          replace in Selected Lines only, then this option applies to those lines only)</li>
+
+          <li>Select the <span class="control">Incremental</span> checkbox if you want to perform incremental find (e.g. the dialog will find matching occurrences while you are
+          typing in the Find field)</li>
         </ul>
       </li>
+
       <li>
         Press: 
+
         <ul>
-          <li>
-            <span class="control">Find</span> if you want to find the next matching occurrence
-          </li>
-          <li>
-            <span class="control">Replace</span>, if you want to replace the currently selected occurrence with the new text
-          </li>
-          <li>
-            <span class="control">Replace / Find</span>, if you want to replace the currently selected occurrence with the new text and find the next matching occurrence
-          </li>
-          <li>
-            <span class="control">Replace All</span>, if you want to replace all matching occurrences with the new text
-          </li>
+          <li><span class="control">Find</span> if you want to find the next matching occurrence</li>
+
+          <li><span class="control">Replace</span>, if you want to replace the currently selected occurrence with the new text</li>
+
+          <li><span class="control">Replace / Find</span>, if you want to replace the currently selected occurrence with the new text and find the next matching occurrence</li>
+
+          <li><span class="control">Replace All</span>, if you want to replace all matching occurrences with the new text</li>
         </ul>
       </li>
-      <li>
-        Press <span class="control">Close</span>.
-      </li>
+
+      <li>Press <span class="control">Close</span>.</li>
     </ol>
-    <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
-       <a href="../concepts/concepts-7.htm">Java editor</a><br>
+
+    <p><img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+     <a href="../concepts/concepts-7.htm">Java editor</a><br>
     </p>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="tasks-54.htm">Using the Java editor</a><br>
-       <a href="tasks-173.htm">Finding and replacing</a><a href="tasks-173.htm"></a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-menu-edit.htm">Edit menu</a><a href="../reference/ref-menu-edit.htm"></a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
-      "324"></a><br>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-54.htm">Using the Java editor</a><br>
+     <a href="tasks-173.htm">Finding and replacing</a><a href="tasks-173.htm"></a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-menu-edit.htm">Edit menu</a><a href="../reference/ref-menu-edit.htm"></a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a><br>
     </p>
   </body>
 </html>
