--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-185.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-185.htm
@@ -1,52 +1,42 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
-    <title>
-      Showing and hiding Java files
-    </title>
+    <title>Showing and hiding Java files</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
+
   <body>
-    <h1>
-      Showing and hiding Java files
-    </h1>
-    <p>
-      To show Java files:
-    </p>
+    <h1>Showing and hiding Java files</h1>
+
+    <p>To show Java files:</p>
+
     <ol>
-      <li>
-        Select the <span class="control">Filters</span> command from the Package Explorer&#39;s drop-down menu.
-      </li>
-      <li>
-        Clear the <span class="control">Hide Java files</span> checkbox.
-      </li>
+      <li>Select the <span class="control">Filters</span> command from the Package Explorer's drop-down menu.</li>
+
+      <li>Clear the <span class="control">Hide Java files</span> checkbox.</li>
     </ol>
-    <p>
-      To hide Java files:
-    </p>
+
+    <p>To hide Java files:</p>
+
     <ol>
-      <li>
-        Select the <span class="control">Filters</span> command from the Package Explorer&#39;s drop-down menu.
-      </li>
-      <li>
-        Select the <span class="control">Hide Java files</span> checkbox.
-      </li>
+      <li>Select the <span class="control">Filters</span> command from the Package Explorer's drop-down menu.</li>
+
+      <li>Select the <span class="control">Hide Java files</span> checkbox.</li>
     </ol>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="tasks-2.htm">Showing and hiding elements</a><br>
-       <a href="tasks-47.htm">Filtering elements</a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-dialog-java-element-filters.htm">Java Element Filters</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
-    </p>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-2.htm">Showing and hiding elements</a><br>
+     <a href="tasks-47.htm">Filtering elements</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-dialog-java-element-filters.htm">Java Element Filters</a><br>
+     <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a></p>
   </body>
 </html>
 
