--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
@@ -1,49 +1,40 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
-    <title>
-      Finding strings to externalize
-    </title>
+    <title>Finding strings to externalize</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
+
   <body>
-    <h1>
-      Finding strings to externalize
-    </h1>
-    <p>
-      To find strings to externalize:
-    </p>
+    <h1>Finding strings to externalize</h1>
+
+    <p>To find strings to externalize:</p>
+
     <ul>
-      <li>
-        In a Java view (e.g. Package Explorer), select a set (which can contain a single element) of packages, source folders or projects.
-      </li>
-      <li>
-        From the menu bar, select <span class="control">Source &gt; Find Strings to Externalize</span>
-      </li>
-      <li>
-        A dialog comes up with a list of all compilation units that have some not-externalized strings
-      </li>
+      <li>In a Java view (e.g. Package Explorer), select a set (which can contain a single element) of packages, source folders or projects.</li>
+
+      <li>From the menu bar, select <span class="control">Source &gt; Find Strings to Externalize</span></li>
+
+      <li>A dialog comes up with a list of all compilation units that have some not-externalized strings</li>
     </ul>
-    <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
-       <a href="../concepts/cnls.htm">String Externalization</a>
-    </p>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="tasks-206.htm">Externalizing Strings</a><br>
-       <a href="tasks-202.htm">Finding unused and incorrectly used keys in property files</a><br>
-       <a href="tasks-180.htm">Using the Externalize Strings wizard</a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-wizard-externalize-strings.htm">Externalize Strings wizard</a><br>
-       <a href="../reference/ref-menu-source.htm">Source menu</a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
-    </p>
+
+    <p><img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+     <a href="../concepts/cnls.htm">String Externalization</a></p>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-206.htm">Externalizing Strings</a><br>
+     <a href="tasks-202.htm">Finding unused and incorrectly used keys in property files</a><br>
+     <a href="tasks-180.htm">Using the Externalize Strings wizard</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-wizard-externalize-strings.htm">Externalize Strings wizard</a><br>
+     <a href="../reference/ref-menu-source.htm">Source menu</a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a></p>
   </body>
 </html>
 
