--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
@@ -1,60 +1,49 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
-    <title>
-      Showing and hiding members in Java views
-    </title>
+    <title>Showing and hiding members in Java views</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
+
   <body>
-    <h1>
-      Showing and hiding members in Java views
-    </h1>
-    <p>
-      Several Java views (e.g. Outline, Package Explorer, Members) offer filtering of members (fields, types and methods). The filters are available as toolbar buttons. There are
-      3 member filters:
-    </p>
+    <h1>Showing and hiding members in Java views</h1>
+
+    <p>Several Java views (e.g. Outline, Package Explorer, Members) offer filtering of members (fields, types and methods). The filters are available as toolbar buttons. There are
+    3 member filters:</p>
+
     <ul>
-      <li>
-        <span class="control">Hide Fields</span>: when toggled on, this filter will cause all fields to be removed from the view.
-      </li>
-      <li>
-        <span class="control">Hide Static Members</span>: when toggled on, this filter will cause all static members to be removed from the view.
-      </li>
-      <li>
-        <span class="control">Hide Non-Public Members</span>: when toggled on, this filter will cause all non-public members to be removed from the view.
-      </li>
+      <li><span class="control">Hide Fields</span>: when toggled on, this filter will cause all fields to be removed from the view.</li>
+
+      <li><span class="control">Hide Static Members</span>: when toggled on, this filter will cause all static members to be removed from the view.</li>
+
+      <li><span class="control">Hide Non-Public Members</span>: when toggled on, this filter will cause all non-public members to be removed from the view.</li>
     </ul>
     Additionally, Package Explorer can display or hide all elements inside compilation units. 
-    <p>
-      To show members in Package Explorer:
-    </p>
+
+    <p>To show members in Package Explorer:</p>
+
     <ul>
-      <li>
-        Select the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show members in Package Explorer</span> checkbox
-      </li>
+      <li>Select the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show members in Package Explorer</span> checkbox</li>
     </ul>
     To hide members in Package Explorer: 
+
     <ul>
-      <li>
-        Clear the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show members in Package Explorer</span> checkbox
-      </li>
+      <li>Clear the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show members in Package Explorer</span> checkbox</li>
     </ul>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="tasks-2.htm">Showing and hiding elements</a><br>
-       <a href="tasks-47.htm">Filtering elements</a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-preferences-appearance.htm">Appearance preference page</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
-    </p>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-2.htm">Showing and hiding elements</a><br>
+     <a href="tasks-47.htm">Filtering elements</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-preferences-appearance.htm">Appearance preference page</a><br>
+     <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a></p>
   </body>
 </html>
 
