--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
@@ -1,50 +1,41 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
-    <title>
-      Showing and hiding method return types in Java views
-    </title>
+    <title>Showing and hiding method return types in Java views</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
+
   <body>
-    <h1>
-      Showing and hiding method return types in Java views
-    </h1>
-    <p>
-      Several Java views (e.g. Outline, Members) present methods and can also show their return types.
-    </p>
-    <p>
-      To show method return types in Java views:
-    </p>
+    <h1>Showing and hiding method return types in Java views</h1>
+
+    <p>Several Java views (e.g. Outline, Members) present methods and can also show their return types.</p>
+
+    <p>To show method return types in Java views:</p>
+
     <ul>
-      <li>
-        Select the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method return types</span> checkbox
-      </li>
+      <li>Select the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method return types</span> checkbox</li>
     </ul>
-    <p>
-      To hide method return types in Java views:
-    </p>
+
+    <p>To hide method return types in Java views:</p>
+
     <ul>
-      <li>
-        Clear the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method return types</span> checkbox
-      </li>
+      <li>Clear the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method return types</span> checkbox</li>
     </ul>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="tasks-2.htm">Showing and hiding elements</a><br>
-       <a href="tasks-47.htm">Filtering elements</a><br>
-       <a href="tasks-47.htm"></a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-preferences-appearance.htm">Appearance preference page</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
-    </p>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-2.htm">Showing and hiding elements</a><br>
+     <a href="tasks-47.htm">Filtering elements</a><br>
+     <a href="tasks-47.htm"></a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-preferences-appearance.htm">Appearance preference page</a><br>
+     <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a></p>
   </body>
 </html>
 
