--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -1,53 +1,45 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
-    <title>
-      Showing full or compressed package names
-    </title>
+    <title>Showing full or compressed package names</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
+
   <body>
-    <h1>
-      Showing full or compressed package names
-    </h1>
-    <p>
-      Package Explorer and Packages views can show full or compressed package names.
-    </p>
-    <p>
-      To show full package names:
-    </p>
+    <h1>Showing full or compressed package names</h1>
+
+    <p>Package Explorer and Packages views can show full or compressed package names.</p>
+
+    <p>To show full package names:</p>
+
     <ul>
-      <li>
-        Clear the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress package name segments</span> checkbox<span class="control">.</span>
-      </li>
+      <li>Clear the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress package name segments</span> checkbox<span class="control">.</span></li>
     </ul>
     To show compressed package names: 
+
     <ul>
       <li>
-        <p>
-          Select the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress package name segments</span> checkbox.
-        </p>
-        <p>
-          A compression pattern can contain a digit (n), which represents the first n characters of a package name segment.<br>
-           The compression pattern is not used if the resulting name is longer than the original package name. For example, using a pattern <span class="control">3~.</span> on a
-          package named <span class="control">org.eclipse.jdt</span> results in <span class="control">org.ecl~.jdt</span>
-        </p>
+        <p>Select the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress package name segments</span> checkbox.</p>
+
+        <p>A compression pattern can contain a digit (n), which represents the first n characters of a package name segment.<br>
+         The compression pattern is not used if the resulting name is longer than the original package name. For example, using a pattern <span class="control">3~.</span> on a
+        package named <span class="control">org.eclipse.jdt</span> results in <span class="control">org.ecl~.jdt</span></p>
       </li>
     </ul>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-preferences-appearance.htm">Java Appearance preference page</a>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-preferences-appearance.htm">Java Appearance preference page</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-preferences-appearance.htm">Appearance preference page</a><br>
+     <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
     </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-preferences-appearance.htm">Appearance preference page</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
-    </p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a></p>
   </body>
 </html>
 
