--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-195.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-195.htm
@@ -1,56 +1,45 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
-    <title>
-      Sorting elements in Java views
-    </title>
+    <title>Sorting elements in Java views</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
+
   <body>
-    <h1>
-      Sorting elements in Java views
-    </h1>
-    <p>
-      Members and Outline views can present members sorted or in the order of declaration in compilation unit.
-    </p>
-    <p>
-      To sort members:
-    </p>
+    <h1>Sorting elements in Java views</h1>
+
+    <p>Members and Outline views can present members sorted or in the order of declaration in compilation unit.</p>
+
+    <p>To sort members:</p>
+
     <ul>
-      <li>
-        Toggle on the <span class="control">Sort</span> toolbar button in the Java view
-      </li>
+      <li>Toggle on the <span class="control">Sort</span> toolbar button in the Java view</li>
     </ul>
-    <p class="Note">
-      Note: the sorting order is defined as follows:
-    </p>
+
+    <p class="Note">Note: the sorting order is defined as follows:</p>
+
     <ul>
-      <li>
-        Nested types are presented before other members
-      </li>
-      <li>
-        Fields are presented before methods
-      </li>
-      <li>
-        Static members are presented before non-static members
-      </li>
-      <li>
-        After the above sorting is performed, members in each group are sorted alphabetically
-      </li>
+      <li>Nested types are presented before other members</li>
+
+      <li>Fields are presented before methods</li>
+
+      <li>Static members are presented before non-static members</li>
+
+      <li>After the above sorting is performed, members in each group are sorted alphabetically</li>
     </ul>
     To present members in the order of declaration in compilation unit. 
+
     <ul>
-      <li>
-        Toggle off the <span class="control">Sort</span> toolbar button in the Java view
-      </li>
+      <li>Toggle off the <span class="control">Sort</span> toolbar button in the Java view</li>
     </ul>
     <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"> <br>
      <a href="../reference/ref-3.htm">Java Toolbar actions</a><a href="../reference/ref-3.htm"></a> 
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
-    </p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a></p>
   </body>
 </html>
 
