--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-204.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-204.htm
@@ -1,58 +1,53 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
-    <title>
-      Renaming a local variable
-    </title>
+
+    <title>Renaming a local variable</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
+
   <body>
-    <h1>
-      Renaming a local variable
-    </h1>
-    <p>
-      To rename a local variable (or a method parameter):
-    </p>
+    <h1>Renaming a local variable</h1>
+
+    <p>To rename a local variable (or a method parameter):</p>
+
     <ul>
-      <li>
-        Select the variable (or a reference to it) in the Java editor
-      </li>
+      <li>Select the variable (or a reference to it) in the Java editor</li>
+
       <li>
         Do one of the following: 
+
         <ul>
-          <li>
-            From the menu bar, select <span class="control">Refactor &gt; Rename</span> or
-          </li>
-          <li>
-            From the editor&#39;s pop-up menu, select <span class="control">Refactor &gt; Rename</span>
-          </li>
+          <li>From the menu bar, select <span class="control">Refactor &gt; Rename</span> or</li>
+
+          <li>From the editor's pop-up menu, select <span class="control">Refactor &gt; Rename</span></li>
         </ul>
       </li>
     </ul>
-    <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
-       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
+
+    <p><img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+     <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-205.htm">Parameters page</a><br>
+     <a href="tasks-159.htm">Extracting a local variable</a><br>
+     <a href="tasks-161.htm">Inlining a local variable</a><br>
+     <a href="tasks-98.htm">Renaming method parameters</a><br>
+     <a href="tasks-157.htm">Reordering method parameters</a><br>
+     <a href="tasks-164.htm">Replacing a local variable with a query</a><br>
     </p>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="tasks-205.htm">Parameters page</a><br>
-       <a href="tasks-159.htm">Extracting a local variable</a><br>
-       <a href="tasks-161.htm">Inlining a local variable</a><br>
-       <a href="tasks-98.htm">Renaming method parameters</a><br>
-       <a href="tasks-157.htm">Reordering method parameters</a><br>
-       <a href="tasks-164.htm">Replacing a local variable with a query</a><br>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
+     <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+     <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
     </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
-       <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
-    </p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a></p>
   </body>
 </html>
 
