--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
@@ -1,127 +1,97 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
-    <title>
-      Creating JUnit tests
-    </title>
+    <title>Creating JUnit tests</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
+
   <body>
-    <h1>
-      Creating JUnit tests
-    </h1>
-    <p>
-      To develop JUnit tests follow these steps to set-up your project:
-    </p>
+    <h1>Creating JUnit tests</h1>
+
+    <p>To develop JUnit tests follow these steps to set-up your project:</p>
+
     <ol>
-      <li>
-        Create a Java project
-      </li>
-      <li>
-        Open the project&#39;s build path property page and add the junit.jar contained in the org.junit plugin of your Eclipse install as an external JAR.
-      </li>
-      <li>
-        If you want to avoid absolute pathnames on the build classpath you can introduce a class path variable and reference the junit.jar relative to this variable.
-      </li>
-      <li>
-        If you want to browse the JUnit source then attach the src.jar contained in the org.junit plugin to the junit.jar.
-      </li>
-      <li>
-        Implement a TestCase subclass with some tests and build them.
-      </li>
+      <li>Create a Java project</li>
+
+      <li>Open the project's build path property page and add the junit.jar contained in the org.junit plugin of your Eclipse install as an external JAR.</li>
+
+      <li>If you want to avoid absolute pathnames on the build classpath you can introduce a class path variable and reference the junit.jar relative to this variable.</li>
+
+      <li>If you want to browse the JUnit source then attach the src.jar contained in the org.junit plugin to the junit.jar.</li>
+
+      <li>Implement a TestCase subclass with some tests and build them.</li>
     </ol>
-    <p>
-      You can also use the TestCase wizard:
-    </p>
+
+    <p>You can also use the TestCase wizard:</p>
+
     <ol>
       <li>
         Open the new wizard dialog by doing one of the following: 
+
         <ul>
-          <li>
-            pressing <kbd>Ctrl</kbd>+<kbd>N</kbd> or
-          </li>
-          <li>
-            selecting <span class="control">File &gt; New &gt; Othe</span>r from the menu bar or
-          </li>
-          <li>
-            pressing the <span class="control">Open the New Wizard</span> toolbar button or
-          </li>
+          <li>pressing <kbd>Ctrl</kbd>+<kbd>N</kbd> or</li>
+
+          <li>selecting <span class="control">File &gt; New &gt; Othe</span>r from the menu bar or</li>
+
+          <li>pressing the <span class="control">Open the New Wizard</span> toolbar button or</li>
         </ul>
       </li>
+
+      <li>Select <span class="control">Java &gt; Junit</span> in the left pane and <span class="control">TestCase</span> in the right pane</li>
+
       <li>
-        Select <span class="control">Java &gt; Junit</span> in the left pane and <span class="control">TestCase</span> in the right pane
+        <p>Press <span class="control">Next</span></p>
+
+        <p><img src="../images/tasks-208a.gif" width="500" height="500" alt="TestCase creation wizard page 1"></p>
       </li>
+
+      <li>In the <span class="control">Source Folder</span> field, enter the name of the source folder in which your test will be created. You can use the <span class=
+      "control">Browse</span> button and select the source folder from the resulting dialog.</li>
+
+      <li>In the <span class="control">Package</span> field, enter the name (empty name denotes the default package) of the package in which your test will be created. You can use
+      the <span class="control">Browse</span> button and select the package from the resulting dialog.</li>
+
+      <li>In the <span class="control">Test case</span> field, enter the name for the test you are creating.</li>
+
+      <li>In the <span class="control">Test class</span>, enter (optionally) the name of the class that your test will be testing. Selecting a class for testing will later allow
+      you to create test methods for public method in the selected class.</li>
+
+      <li>In the <span class="control">Superclass</span> field, enter the name of the superclass of your test (this class must implement the <code>junit.framework.Test</code>
+      interface).</li>
+
+      <li>Use the checkboxes to select the methods that you want to create in the test.</li>
+
+      <li>If you left the <span class="control">Test class</span> field empty, then press <span class="control">Finish</span> to create the test.</li>
+
       <li>
-        <p>
-          Press <span class="control">Next</span>
-        </p>
-        <p>
-          <img src="../images/tasks-208a.gif" width="500" height="500" alt="TestCase creation wizard page 1">
-        </p>
-      </li>
-      <li>
-        In the <span class="control">Source Folder</span> field, enter the name of the source folder in which your test will be created. You can use the <span class=
-        "control">Browse</span> button and select the source folder from the resulting dialog.
-      </li>
-      <li>
-        In the <span class="control">Package</span> field, enter the name (empty name denotes the default package) of the package in which your test will be created. You can use
-        the <span class="control">Browse</span> button and select the package from the resulting dialog.
-      </li>
-      <li>
-        In the <span class="control">Test case</span> field, enter the name for the test you are creating.
-      </li>
-      <li>
-        In the <span class="control">Test class</span>, enter (optionally) the name of the class that your test will be testing. Selecting a class for testing will later allow you
-        to create test methods for public method in the selected class.
-      </li>
-      <li>
-        In the <span class="control">Superclass</span> field, enter the name of the superclass of your test (this class must implement the <code>junit.framework.Test</code>
-        interface).
-      </li>
-      <li>
-        Use the checkboxes to select the methods that you want to create in the test.
-      </li>
-      <li>
-        If you left the <span class="control">Test class</span> field empty, then press <span class="control">Finish</span> to create the test.
-      </li>
-      <li>
-        <p>
-          If you entered the name of the class to be tested, then:
-        </p>
+        <p>If you entered the name of the class to be tested, then:</p>
+
         <ul>
-          <li>
-            press <span class="control">Finish</span> to create the test without generating test methods or
-          </li>
-          <li>
-            press <span class="control">Next</span> to select the public methods that you want to test
-          </li>
+          <li>press <span class="control">Finish</span> to create the test without generating test methods or</li>
+
+          <li>press <span class="control">Next</span> to select the public methods that you want to test</li>
         </ul>
-        <p>
-          <img src="../images/tasks-208b.gif" alt="TestCase creation wizard page 2">
-        </p>
+
+        <p><img src="../images/tasks-208b.gif" alt="TestCase creation wizard page 2"></p>
       </li>
-      <li>
-        Use the checkbox tree control to select the methods for which you want the wizard to create tests
-      </li>
-      <li>
-        Select the <span class="control">Create tasks for generated Test methods</span> if you want to add tasks that will remind you to implement the test methods
-      </li>
-      <li>
-        Press <span class="control">Finish</span>
-      </li>
+
+      <li>Use the checkbox tree control to select the methods for which you want the wizard to create tests</li>
+
+      <li>Select the <span class="control">Create tasks for generated Test methods</span> if you want to add tasks that will remind you to implement the test methods</li>
+
+      <li>Press <span class="control">Finish</span></li>
     </ol>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="tasks-207.htm">Using JUnit</a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
-    </p>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-207.htm">Using JUnit</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a></p>
   </body>
 </html>
 
