--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
@@ -1,90 +1,71 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <title>
-      Creating and updating JUnit test suites
-    </title>
+
+    <title>Creating and updating JUnit test suites</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
+
   <body>
-    <h1>
-      Creating and updating JUnit test suites
-    </h1>
-    <p>
-      To create a new test suite:
-    </p>
+    <h1>Creating and updating JUnit test suites</h1>
+
+    <p>To create a new test suite:</p>
+
     <ol>
-      <li>
-        Select a package in which you have tests for which you want to create a test suite.
-      </li>
+      <li>Select a package in which you have tests for which you want to create a test suite.</li>
+
       <li>
         Open the new wizard dialog by doing one of the following: 
+
         <ul>
-          <li>
-            pressing <kbd>Ctrl</kbd>+<kbd>N</kbd> or
-          </li>
-          <li>
-            selecting <span class="control">File &gt; New &gt; Othe</span>r from the menu bar or
-          </li>
-          <li>
-            pressing the <span class="control">Open the New Wizard</span> toolbar button
-          </li>
+          <li>pressing <kbd>Ctrl</kbd>+<kbd>N</kbd> or</li>
+
+          <li>selecting <span class="control">File &gt; New &gt; Othe</span>r from the menu bar or</li>
+
+          <li>pressing the <span class="control">Open the New Wizard</span> toolbar button</li>
         </ul>
       </li>
+
+      <li>Select <span class="control">Java &gt; Junit</span> from the left pane and <span class="control">TestSuite</span> from the right pane</li>
+
       <li>
-        Select <span class="control">Java &gt; Junit</span> from the left pane and <span class="control">TestSuite</span> from the right pane
+        <p>Press <span class="control">Next</span></p>
+
+        <p><img src="../images/tasks-209a.gif" alt="TestSuite creation wizard"></p>
       </li>
-      <li>
-        <p>
-          Press <span class="control">Next</span>
-        </p>
-        <p>
-          <img src="../images/tasks-209a.gif" alt="TestSuite creation wizard">
-        </p>
-      </li>
-      <li>
-        In the <span class="control">Source folder</span> field, enter the name of the source folder in which the test suite will be created.
-      </li>
-      <li>
-        In the <span class="control">Package</span> field, enter the name of the package (empty name denotes the default package) in which the test suite will be created.
-      </li>
-      <li>
-        In the <span class="control">Test suite</span> field, enter the name of the test suite class.
-      </li>
-      <li>
-        In the presented list of classes, select the test classes for which you want to create the test suite.
-      </li>
-      <li>
-        Press <span class="control">Finish</span>.
-      </li>
+
+      <li>In the <span class="control">Source folder</span> field, enter the name of the source folder in which the test suite will be created.</li>
+
+      <li>In the <span class="control">Package</span> field, enter the name of the package (empty name denotes the default package) in which the test suite will be created.</li>
+
+      <li>In the <span class="control">Test suite</span> field, enter the name of the test suite class.</li>
+
+      <li>In the presented list of classes, select the test classes for which you want to create the test suite.</li>
+
+      <li>Press <span class="control">Finish</span>.</li>
     </ol>
-    <p>
-      You can add new test classes (or remove some) to the created suite:
-    </p>
+
+    <p>You can add new test classes (or remove some) to the created suite:</p>
+
     <ul>
-      <li>
-        Either manually or
-      </li>
-      <li>
-        By re-running the wizard and selecting the new set of test classes.
-      </li>
+      <li>Either manually or</li>
+
+      <li>By re-running the wizard and selecting the new set of test classes.</li>
     </ul>
-    <p>
-      Note: the wizard puts 2 special markers (<code>//$JUnit-BEGIN$</code> and <code>//$JUnit-END$</code>) into the created Test suite class, which allows the wizard to update
-      existing test suite classes. It is recommended not to edit code that lies between the markers.
-    </p>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-       <a href="tasks-207.htm">Using JUnit</a><a href="tasks-207.htm"></a>
-    </p>
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
-    </p>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
-    </p>
+
+    <p>Note: the wizard puts 2 special markers (<code>//$JUnit-BEGIN$</code> and <code>//$JUnit-END$</code>) into the created Test suite class, which allows the wizard to update
+    existing test suite classes. It is recommended not to edit code that lies between the markers.</p>
+
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-207.htm">Using JUnit</a><a href="tasks-207.htm"></a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a></p>
+
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
+    "324"></a></p>
   </body>
 </html>
 
